// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should open and close transaction details modal 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex overflow-y-hidden fixed inset-0 z-50 w-full md:py-20 dark:bg-opacity-80 custom-scroll overflow-overlay bg-theme-secondary-900/40 backdrop-blur-xl dark:bg-black-rgba/40"
      data-testid="Modal__overlay"
    >
      <div
        class="flex-1 max-w-full md:px-10 md:m-auto md:max-w-2xl"
        tabindex="-1"
      >
        <div
          class="flex overflow-hidden relative flex-col px-6 pt-4 pb-24 min-h-full shadow-2xl sm:mb-0 md:p-8 md:h-auto md:rounded-xl bg-theme-background"
          data-testid="Modal__inner"
        >
          <div
            class="absolute top-0 right-0 z-10 mt-4 mr-6 rounded transition-all duration-100 ease-linear md:mt-8 md:mr-8 hover:text-white bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white hover:bg-theme-primary-800"
          >
            <button
              class="inline-flex relative justify-center items-center p-3 w-8 h-8 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="Modal__close-button"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="cross"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M.954 18.981l18-18M18.954 18.981l-18-18"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
          <div
            class="flex relative flex-col flex-1 space-y-1.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
            >
              Transaction Details
            </h2>
            <div
              class="flex flex-col flex-1"
            >
              <div
                class="condensed"
              >
                <div
                  class="mt-4"
                >
                  <div
                    class="flex-row items-center sm:flex sm:rounded-lg sm:border sm:border-theme-secondary-300 sm:dark:border-theme-secondary-800"
                    data-testid="TransactionId"
                  >
                    <div
                      class="mb-2 text-sm font-semibold whitespace-nowrap sm:py-3 sm:px-4 sm:mb-0 sm:h-full sm:text-base sm:leading-5 sm:rounded-l-lg text-theme-secondary-700 leading-[17px] sm:bg-theme-secondary-200 sm:dark:bg-black dark:text-theme-secondary-500"
                    >
                      Transaction ID
                    </div>
                    <div
                      class="overflow-hidden flex-1 font-semibold sm:mx-4"
                    >
                      <span
                        class="overflow-hidden min-w-0 no-ligatures"
                      >
                        0e5291f00bfc54cb94462e1056f28aaf3c90d246d3cad7de17f889387f53b051
                      </span>
                    </div>
                    <div
                      class="flex items-center mt-4 space-x-2 sm:mt-0 sm:mr-4"
                    >
                      <button
                        class="inline-flex relative justify-center items-center p-2 space-x-0 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed ring-focus transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div>
                          <div
                            style="height: 16px; width: 16px;"
                          >
                            <svg
                              id="copy"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                        <span
                          class="sm:hidden"
                        >
                          Copy
                        </span>
                      </button>
                      <button
                        class="inline-flex relative justify-center items-center p-2 w-8 h-8 font-semibold leading-tight text-center bg-transparent rounded border duration-100 ease-linear cursor-pointer dark:bg-transparent hover:text-white hover:border-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-primary-600 border-theme-secondary-300 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 dark:border-theme-secondary-800 dark:hover:border-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                        data-testid="explorer-link"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div>
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="arrow-external"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-6 space-y-3 sm:space-y-4"
                >
                  <div
                    class="flex group"
                  >
                    <div
                      class="hidden sm:flex sm:ml-3"
                    >
                      <div
                        class="flex-row pr-3 min-w-9"
                      >
                        <div
                          class="-mt-2 w-full h-6 rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="border-theme-secondary-300 dark:border-theme-secondary-800 h-[105%] w-full border-l-2 group-last:hidden"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full min-w-0 sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Addressing
                          </div>
                        </div>
                        <div
                          class="flex overflow-hidden flex-col gap-3 mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
                        >
                          <div
                            class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
                          >
                            <div
                              class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
                            >
                              <div
                                class="w-20 text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                              >
                                From
                              </div>
                              <div
                                class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                              >
                                <div
                                  class="relative text-left sm:leading-5 grow leading-[17px]"
                                >
                                  <span
                                    class="overflow-hidden absolute w-3/4 w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px]"
                                    data-testid="Address__address"
                                  >
                                    0xAAB708d34d694C046E0e4F5A2C388e54edb54b3D
                                  </span>
                                  <span>
                                     
                                  </span>
                                </div>
                                <button
                                  class="relative cursor-pointer ring-focus focus:outline-hidden"
                                  data-ring-focus-margin="-m-1"
                                  data-testid="clipboard-icon__wrapper"
                                  type="button"
                                >
                                  <div
                                    class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                                  >
                                    <div
                                      style="height: 16px; width: 16px;"
                                    >
                                      <svg
                                        id="copy"
                                        style="height: 100%; width: 100%;"
                                        viewBox="0 0 20 20"
                                        x="0"
                                        xml:space="preserve"
                                        xmlns="http://www.w3.org/2000/svg"
                                        y="0"
                                      >
                                        <g
                                          fill="none"
                                          stroke="currentColor"
                                          stroke-linecap="round"
                                          stroke-linejoin="round"
                                          stroke-width="2"
                                        >
                                          <path
                                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                          />
                                          <path
                                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                          />
                                        </g>
                                      </svg>
                                    </div>
                                  </div>
                                </button>
                              </div>
                            </div>
                            <div
                              class="flex justify-between items-center mt-3 space-x-2 w-full sm:justify-start sm:space-x-0"
                            >
                              <div
                                class="w-20 text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 shrink-0 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                              >
                                To
                              </div>
                              <div
                                class="flex w-full"
                              >
                                <div
                                  class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                                >
                                  <span
                                    class="text-sm text-base font-semibold sm:text-base sm:leading-5 text-theme-text leading-[17px]"
                                    data-testid="Address__alias"
                                  >
                                    <span
                                      class="transition-colors duration-200 no-ligatures"
                                      data-testid="TruncateEnd"
                                    >
                                      Mainsail Wallet …
                                    </span>
                                  </span>
                                  <div
                                    class="relative text-left sm:leading-5 grow leading-[17px]"
                                  >
                                    <span
                                      class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                                      data-testid="Address__address"
                                    >
                                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                                    </span>
                                    <span>
                                       
                                    </span>
                                  </div>
                                  <button
                                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                                    data-ring-focus-margin="-m-1"
                                    data-testid="clipboard-icon__wrapper"
                                    type="button"
                                  >
                                    <div
                                      class="text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                                    >
                                      <div
                                        style="height: 16px; width: 16px;"
                                      >
                                        <svg
                                          id="copy"
                                          style="height: 100%; width: 100%;"
                                          viewBox="0 0 20 20"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <g
                                            fill="none"
                                            stroke="currentColor"
                                            stroke-linecap="round"
                                            stroke-linejoin="round"
                                            stroke-width="2"
                                          >
                                            <path
                                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                            />
                                            <path
                                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                            />
                                          </g>
                                        </svg>
                                      </div>
                                    </div>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex group"
                  >
                    <div
                      class="hidden sm:flex sm:ml-3"
                    >
                      <div
                        class="flex-row pr-3 min-w-9"
                      >
                        <div
                          class="-mt-2 w-full h-6 rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="border-theme-secondary-300 dark:border-theme-secondary-800 h-[105%] w-full border-l-2 group-last:hidden"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full min-w-0 sm:flex-row"
                    >
                      <div
                        data-testid="TransactionType"
                      >
                        <div
                          data-testid="DetailWrapper"
                        >
                          <div
                            class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
                            data-testid="DetailLabel"
                          >
                            <div
                              class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                              data-testid="DetailLabelText"
                            >
                              Action
                            </div>
                          </div>
                          <div
                            class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
                          >
                            <div
                              class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
                            >
                              <div
                                class="space-y-3 sm:space-y-0"
                              >
                                <div
                                  class="flex justify-between w-full sm:justify-start"
                                >
                                  <div
                                    class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 min-w-24 leading-[17px] dark:text-theme-secondary-500"
                                    data-testid="DetailLabelText"
                                  >
                                    Method
                                  </div>
                                  <div
                                    class="inline-block overflow-hidden px-1 text-xs font-semibold rounded border-2 dark:bg-transparent no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 leading-[15px] dark:text-theme-secondary-500 dark:border-theme-secondary-800"
                                  >
                                    Transfer
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex group"
                  >
                    <div
                      class="hidden sm:flex sm:ml-3"
                    >
                      <div
                        class="flex-row pr-3 min-w-9"
                      >
                        <div
                          class="-mt-2 w-full h-6 rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="border-theme-secondary-300 dark:border-theme-secondary-800 h-[105%] w-full border-l-2 group-last:hidden"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full min-w-0 sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Transaction Summary
                          </div>
                        </div>
                        <div
                          class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
                        >
                          <div
                            class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
                          >
                            <div
                              class="space-y-3 sm:space-y-0"
                            >
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Amount
                                </div>
                                <div
                                  class="flex overflow-hidden justify-center items-center px-1.5 text-base font-semibold rounded dark:bg-transparent dark:border no-ligatures bg-theme-success-100 text-theme-success-700 w-fit h-[21px] dark:border-theme-success-700 dark:text-theme-success-500"
                                  data-testid="AmountLabel__wrapper"
                                >
                                  <div
                                    class="flex items-center space-x-1 h-full"
                                  >
                                    <span
                                      class="text-sm whitespace-nowrap"
                                      data-testid="Amount"
                                    >
                                      + 1 ARK
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="hidden items-center w-full h-8 sm:flex in-[.condensed]:h-3 in-[.condensed]:leading-3"
                              >
                                <div
                                  class="w-full h-full in-[.condensed]:hidden"
                                >
                                  <div
                                    class="flex clear-both my-4 w-full min-w-full border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                                  />
                                </div>
                              </div>
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Fee
                                </div>
                                <span
                                  class="text-sm font-semibold whitespace-nowrap sm:text-base sm:leading-5 leading-[17px]"
                                  data-testid="Amount"
                                >
                                  0.0004019 ARK
                                </span>
                              </div>
                              <div
                                class="hidden items-center w-full h-8 sm:flex in-[.condensed]:h-3 in-[.condensed]:leading-3"
                              >
                                <div
                                  class="w-full h-full in-[.condensed]:hidden"
                                >
                                  <div
                                    class="flex clear-both my-4 w-full min-w-full border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                                  />
                                </div>
                              </div>
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Value
                                </div>
                                <span
                                  class="text-sm font-semibold whitespace-nowrap sm:text-base sm:leading-5 leading-[17px]"
                                  data-testid="Amount"
                                >
                                  0 BTC
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex group"
                  >
                    <div
                      class="hidden sm:flex sm:ml-3"
                    >
                      <div
                        class="flex-row pr-3 min-w-9"
                      >
                        <div
                          class="-mt-2 w-full h-6 rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="border-theme-secondary-300 dark:border-theme-secondary-800 h-[105%] w-full border-l-2 group-last:hidden"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full min-w-0 sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Transaction Details
                          </div>
                        </div>
                        <div
                          class="overflow-hidden mt-0 rounded-xl sm:mt-2 sm:border border-theme-secondary-300 dark:border-theme-dark-700"
                        >
                          <div
                            class="p-3 w-full break-words sm:py-5 sm:px-6 sm:in-[.condensed]:py-4"
                          >
                            <div
                              class="space-y-3 sm:space-y-0"
                            >
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Timestamp
                                </div>
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 leading-[17px]"
                                >
                                  03.04.2025 3:34 AM
                                </div>
                              </div>
                              <div
                                class="hidden items-center w-full h-8 sm:flex in-[.condensed]:h-3 in-[.condensed]:leading-3"
                              >
                                <div
                                  class="w-full h-full in-[.condensed]:hidden"
                                >
                                  <div
                                    class="flex clear-both my-4 w-full min-w-full border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                                  />
                                </div>
                              </div>
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Block
                                </div>
                                <a
                                  class="inline-block relative space-x-1 h-5 text-sm font-semibold no-underline transition-colors cursor-pointer sm:text-base sm:leading-5 text-theme-primary-600 ring-focus group/inner leading-[17px] dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
                                  data-ring-focus-margin="-m-1"
                                  data-testid="Link"
                                  href="https://explorer-evm-test.mainsailhq.com/blocks/7b6f4c321e3f8a4553dd52b9ddd34581c76a2883702f0a2d3f5021504f3e44bb"
                                  rel="noopener noreferrer"
                                >
                                  <span
                                    class="break-all border-b border-transparent transition-colors duration-200 delay-100 group-hover/inner:border-current"
                                  />
                                  <div
                                    class="align-middle duration-200 mb-[3px] shrink-0"
                                    data-testid="Link__external"
                                  >
                                    <div
                                      style="height: 12px; width: 12px;"
                                    >
                                      <svg
                                        id="arrow-external"
                                        style="height: 100%; width: 100%;"
                                        viewBox="0 0 20 20"
                                        x="0"
                                        xml:space="preserve"
                                        xmlns="http://www.w3.org/2000/svg"
                                        y="0"
                                      >
                                        <path
                                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                          fill="none"
                                          stroke="currentColor"
                                          stroke-linecap="round"
                                          stroke-linejoin="round"
                                          stroke-width="2"
                                        />
                                      </svg>
                                    </div>
                                  </div>
                                </a>
                              </div>
                              <div
                                class="hidden items-center w-full h-8 sm:flex in-[.condensed]:h-3 in-[.condensed]:leading-3"
                              >
                                <div
                                  class="w-full h-full in-[.condensed]:hidden"
                                >
                                  <div
                                    class="flex clear-both my-4 w-full min-w-full border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                                  />
                                </div>
                              </div>
                              <div
                                class="flex justify-between w-full sm:justify-start"
                              >
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures text-theme-secondary-700 leading-[17px] min-w-24 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Nonce
                                </div>
                                <div
                                  class="text-sm font-semibold sm:text-base sm:leading-5 leading-[17px]"
                                >
                                  0
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex group"
                  >
                    <div
                      class="hidden sm:flex sm:ml-3"
                    >
                      <div
                        class="flex-row pr-3 min-w-9"
                      >
                        <div
                          class="-mt-2 w-full h-6 rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="border-theme-secondary-300 dark:border-theme-secondary-800 h-[105%] w-full border-l-2 group-last:hidden"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full min-w-0 sm:flex-row"
                    >
                      <div
                        class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
                        data-testid="DetailLabel"
                      >
                        <div
                          class="font-semibold leading-5 no-ligatures text-theme-secondary-700 min-w-24 text-md dark:text-theme-secondary-500"
                          data-testid="DetailLabelText"
                        >
                          Confirmations
                        </div>
                      </div>
                      <div
                        class="mt-2"
                      >
                        <div
                          class="py-2 rounded-xl border sm:py-4 sm:leading-5 dark:bg-transparent border-theme-danger-200 bg-theme-danger-50 max-sm:text-sm dark:border-theme-danger-info-border"
                          data-testid="TransactionFailedAlert"
                        >
                          <div
                            class="flex items-center px-3 mb-2 space-x-3 sm:px-6 sm:mb-4"
                          >
                            <div
                              class="flex items-center space-x-2 text-theme-danger-700 dark:text-theme-danger-info-border"
                            >
                              <div
                                class="h-5"
                              >
                                <div
                                  style="height: 20px; width: 20px;"
                                >
                                  <svg
                                    style="height: 100%; width: 100%;"
                                    viewBox="0 0 12 13"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M6,11.5c2.8,0,5-2.2,5-5S8.8,1.5,6,1.5,1,3.7,1,6.5s2.2,5,5,5Z"
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="1.6"
                                    />
                                    <path
                                      d="M4,6.5h4"
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="1.6"
                                    />
                                  </svg>
                                </div>
                              </div>
                              <p
                                class="font-semibold"
                              >
                                Failed
                              </p>
                            </div>
                            <div
                              class="inline-block relative mx-2 h-5 align-middle border-t-0 border-l border-solid text-theme-danger-200 dark:text-theme-secondary-800"
                            />
                            <p
                              class="font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                            >
                              <span>
                                808 Confirmations
                                 
                              </span>
                            </p>
                          </div>
                          <p
                            class="px-3 pt-2 font-semibold border-t sm:px-6 sm:pt-4 border-theme-danger-200 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                          >
                            Error encountered during contract execution.
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in lg 1`] = `
<div>
  <div>
    <div
      aria-controls=":r9:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in md 1`] = `
<div>
  <div>
    <div
      aria-controls=":r6:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in sm 1`] = `
<div>
  <div>
    <div
      aria-controls=":r3:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xl 1`] = `
<div>
  <div>
    <div
      aria-controls=":rc:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xs 1`] = `
<div>
  <div>
    <div
      aria-controls=":r0:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="custom-button-nav-wrapper group"
      >
        <button
          class="inline-flex relative justify-center items-center p-3 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 m-0"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="bell"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="flex absolute top-0 right-0 justify-center items-center p-0.5 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-theme-danger-500"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
